@@ -29,6 +29,7 @@ namespace mesmer
     BIMOLECULAR_SINK,
     PSEUDOISOMERIZATION,
     SECONDORDERASSOCIATION,
+		DIFFUSION,
     UNDEFINED_REACTION
   };
 
